# game_of_colors

./: .gitignore  Cargo.toml  README.md
src/: main.rs
