[package]
name = "game_of_colors"
version = "0.1.3"
edition = "2021"
author = "amit"

license = "MIT OR Apache-2.0"
description = "command line game of life ... but colorful"
repository = "https://github.com/amitmaish/game_of_colors"

readme = "README.md"

[dependencies]
image = "0.25.5"
rand = "0.8.5"
